Fix formatter main tests